# python-thin-ignite-summit

./: .gitignore  README.md  docker-compose.yml  index.html  pyproject.toml  requirements.txt  style.css
examples/: Untitled.ipynb  basic_async.ipynb  basic_sync.ipynb  hashcode_c.ipynb
slides/: Makefile  main.adoc  talk_notes.adoc  talk_notes.md
slides/parts/: async_api_goodies.adoc  asyncio.adoc  optimizations.adoc  partition_aware.adoc  sync_api_goodies.adoc  sync_examples.adoc
