[tool.poetry]
name = "python-thin-ignite-summit"
version = "0.1.0"
description = ""
authors = ["Ivan Daschinsky <ivandasch@apache.org>"]

[tool.poetry.dependencies]
python = "^3.8"
notebook = "^6.4.0"
pyignite = "0.4.0"#{git = "https://github.com/apache/ignite-python-thin-client"} #"0.4.0"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
